--- a/UserDeviceManager.Api/UserDeviceManager.Api.csproj
+++ b/UserDeviceManager.Api/UserDeviceManager.Api.csproj
@@ -1,21 +1,31 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <Nullable>disable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net8.0</TargetFramework>
+		<Nullable>disable</Nullable>
+		<ImplicitUsings>enable</ImplicitUsings>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.8">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.8">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\UserDeviceManager.Business\UserDeviceManager.Business.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\UserDeviceManager.Business\UserDeviceManager.Business.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<Using Include="AutoMapper" />
+		<Using Include="Microsoft.AspNetCore.Mvc" />
+		<Using Include="UserDeviceManager.Data.Enum" />
+		<Using Include="UserDeviceManager.Api.Models" />
+		<Using Include="UserDeviceManager.Data.Models" />
+		<Using Include="UserDeviceManager.Business.Models" />
+		<Using Include="UserDeviceManager.Business.Interfaces" />
+	</ItemGroup>
 
 </Project>
